--- a/QtDesigner/webdav2ccsds.ui
+++ b/QtDesigner/webdav2ccsds.ui
@@ -1,126 +1,376 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>webdav2ccsds</class>
- <widget class="QMainWindow" name="webdav2ccsds">
-  <property name="windowModality">
-   <enum>Qt::NonModal</enum>
-  </property>
+ <class>ccsds_dialog</class>
+ <widget class="QDialog" name="ccsds_dialog">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>864</width>
-    <height>553</height>
+    <width>979</width>
+    <height>606</height>
    </rect>
   </property>
-  <property name="windowTitle">
-   <string>CCSDS webdav Client</string>
+  <property name="minimumSize">
+   <size>
+    <width>979</width>
+    <height>606</height>
+   </size>
   </property>
-  <widget class="QWidget" name="centralwidget"/>
-  <widget class="QMenuBar" name="menubar">
+  <property name="maximumSize">
+   <size>
+    <width>979</width>
+    <height>614</height>
+   </size>
+  </property>
+  <property name="windowTitle">
+   <string>WebDAV Client for CCSDS</string>
+  </property>
+  <property name="sizeGripEnabled">
+   <bool>false</bool>
+  </property>
+  <widget class="QFrame" name="head_frame">
    <property name="geometry">
     <rect>
-     <x>0</x>
+     <x>-10</x>
      <y>0</y>
-     <width>864</width>
-     <height>22</height>
+     <width>1001</width>
+     <height>51</height>
     </rect>
    </property>
-   <property name="autoFillBackground">
-    <bool>false</bool>
+   <property name="frameShape">
+    <enum>QFrame::StyledPanel</enum>
    </property>
-   <property name="defaultUp">
-    <bool>false</bool>
+   <property name="frameShadow">
+    <enum>QFrame::Raised</enum>
    </property>
-   <property name="nativeMenuBar">
-    <bool>false</bool>
-   </property>
-   <widget class="QMenu" name="menuFile">
-    <property name="title">
-     <string>文件</string>
+   <widget class="QComboBox" name="qc_comb">
+    <property name="geometry">
+     <rect>
+      <x>470</x>
+      <y>10</y>
+      <width>21</width>
+      <height>31</height>
+     </rect>
     </property>
-    <addaction name="action_2"/>
-    <addaction name="actionTest"/>
+    <item>
+     <property name="text">
+      <string>127.0.0.1</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>192.168.1.1</string>
+     </property>
+    </item>
    </widget>
-   <widget class="QMenu" name="menu">
-    <property name="title">
-     <string>编辑</string>
+   <widget class="QLabel" name="port_label">
+    <property name="geometry">
+     <rect>
+      <x>220</x>
+      <y>10</y>
+      <width>31</width>
+      <height>31</height>
+     </rect>
     </property>
-   </widget>
-   <widget class="QMenu" name="menu_2">
-    <property name="title">
-     <string>查看</string>
-    </property>
-   </widget>
-   <widget class="QMenu" name="menu_3">
-    <property name="title">
-     <string>站点</string>
-    </property>
-   </widget>
-   <widget class="QMenu" name="menu_4">
-    <property name="title">
-     <string>安全</string>
-    </property>
-   </widget>
-   <widget class="QMenu" name="menu_5">
-    <property name="title">
-     <string>队列</string>
+    <property name="text">
+     <string>Port:</string>
     </property>
    </widget>
-   <widget class="QMenu" name="menu_6">
-    <property name="title">
-     <string>日志</string>
+   <widget class="QLabel" name="user_label">
+    <property name="geometry">
+     <rect>
+      <x>590</x>
+      <y>10</y>
+      <width>41</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>User:</string>
     </property>
    </widget>
-   <widget class="QMenu" name="menu_7">
-    <property name="title">
-     <string>工具</string>
+   <widget class="QLineEdit" name="port_edit">
+    <property name="geometry">
+     <rect>
+      <x>260</x>
+      <y>10</y>
+      <width>51</width>
+      <height>31</height>
+     </rect>
     </property>
    </widget>
-   <widget class="QMenu" name="menu_8">
-    <property name="title">
-     <string>帮助</string>
+   <widget class="QLineEdit" name="user_edit">
+    <property name="geometry">
+     <rect>
+      <x>630</x>
+      <y>10</y>
+      <width>131</width>
+      <height>31</height>
+     </rect>
     </property>
    </widget>
-   <addaction name="menuFile"/>
-   <addaction name="menu"/>
-   <addaction name="menu_2"/>
-   <addaction name="menu_3"/>
-   <addaction name="menu_4"/>
-   <addaction name="menu_5"/>
-   <addaction name="menu_6"/>
-   <addaction name="menu_7"/>
-   <addaction name="menu_8"/>
+   <widget class="QLineEdit" name="pwd_edit">
+    <property name="geometry">
+     <rect>
+      <x>840</x>
+      <y>10</y>
+      <width>131</width>
+      <height>31</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="host_label">
+    <property name="geometry">
+     <rect>
+      <x>40</x>
+      <y>10</y>
+      <width>71</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Host:</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="pwd_label">
+    <property name="geometry">
+     <rect>
+      <x>770</x>
+      <y>10</y>
+      <width>81</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Password:</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="host_edit">
+    <property name="geometry">
+     <rect>
+      <x>80</x>
+      <y>10</y>
+      <width>131</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="maxLength">
+     <number>342764</number>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="qc_btn">
+    <property name="geometry">
+     <rect>
+      <x>330</x>
+      <y>10</y>
+      <width>141</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Quick Connected</string>
+    </property>
+   </widget>
   </widget>
-  <widget class="QStatusBar" name="statusbar"/>
-  <action name="actionTest">
-   <property name="text">
-    <string>退出</string>
+  <widget class="QFrame" name="bl_frame">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>80</y>
+     <width>461</width>
+     <height>291</height>
+    </rect>
    </property>
-  </action>
-  <action name="action_2">
-   <property name="text">
-    <string>连接...</string>
+   <property name="frameShape">
+    <enum>QFrame::StyledPanel</enum>
    </property>
-  </action>
+   <property name="frameShadow">
+    <enum>QFrame::Raised</enum>
+   </property>
+   <widget class="QFrame" name="bl_h_frame">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>0</y>
+      <width>461</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="frameShape">
+     <enum>QFrame::StyledPanel</enum>
+    </property>
+    <property name="frameShadow">
+     <enum>QFrame::Raised</enum>
+    </property>
+    <widget class="QLabel" name="local_label">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>10</y>
+       <width>71</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Local:</string>
+     </property>
+    </widget>
+    <widget class="QComboBox" name="local_comb">
+     <property name="geometry">
+      <rect>
+       <x>60</x>
+       <y>10</y>
+       <width>391</width>
+       <height>31</height>
+      </rect>
+     </property>
+    </widget>
+   </widget>
+   <widget class="QTreeView" name="local_treeView">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>50</y>
+      <width>461</width>
+      <height>241</height>
+     </rect>
+    </property>
+   </widget>
+  </widget>
+  <widget class="QFrame" name="br_frame">
+   <property name="geometry">
+    <rect>
+     <x>500</x>
+     <y>80</y>
+     <width>461</width>
+     <height>291</height>
+    </rect>
+   </property>
+   <property name="frameShape">
+    <enum>QFrame::StyledPanel</enum>
+   </property>
+   <property name="frameShadow">
+    <enum>QFrame::Raised</enum>
+   </property>
+   <widget class="QFrame" name="br_h_frame">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>0</y>
+      <width>461</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="frameShape">
+     <enum>QFrame::StyledPanel</enum>
+    </property>
+    <property name="frameShadow">
+     <enum>QFrame::Raised</enum>
+    </property>
+    <widget class="QLabel" name="remote_label">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>10</y>
+       <width>71</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Remote:</string>
+     </property>
+    </widget>
+    <widget class="QComboBox" name="remote_comb">
+     <property name="geometry">
+      <rect>
+       <x>80</x>
+       <y>10</y>
+       <width>371</width>
+       <height>31</height>
+      </rect>
+     </property>
+    </widget>
+   </widget>
+   <widget class="QTreeView" name="treeView_2">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>50</y>
+      <width>461</width>
+      <height>241</height>
+     </rect>
+    </property>
+   </widget>
+  </widget>
+  <widget class="QFrame" name="foot_frame">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>390</y>
+     <width>941</width>
+     <height>201</height>
+    </rect>
+   </property>
+   <property name="frameShape">
+    <enum>QFrame::StyledPanel</enum>
+   </property>
+   <property name="frameShadow">
+    <enum>QFrame::Raised</enum>
+   </property>
+   <widget class="QFrame" name="foot_h_frame">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>0</y>
+      <width>941</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="frameShape">
+     <enum>QFrame::StyledPanel</enum>
+    </property>
+    <property name="frameShadow">
+     <enum>QFrame::Raised</enum>
+    </property>
+    <widget class="QLabel" name="log_label">
+     <property name="geometry">
+      <rect>
+       <x>430</x>
+       <y>0</y>
+       <width>101</width>
+       <height>41</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>  Event Log</string>
+     </property>
+    </widget>
+   </widget>
+   <widget class="QListView" name="log_listView">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>40</y>
+      <width>941</width>
+      <height>192</height>
+     </rect>
+    </property>
+   </widget>
+  </widget>
  </widget>
+ <tabstops>
+  <tabstop>host_edit</tabstop>
+  <tabstop>port_edit</tabstop>
+  <tabstop>user_edit</tabstop>
+  <tabstop>pwd_edit</tabstop>
+  <tabstop>qc_comb</tabstop>
+  <tabstop>qc_btn</tabstop>
+  <tabstop>local_treeView</tabstop>
+  <tabstop>treeView_2</tabstop>
+  <tabstop>log_listView</tabstop>
+  <tabstop>local_comb</tabstop>
+  <tabstop>remote_comb</tabstop>
+ </tabstops>
  <resources/>
- <connections>
-  <connection>
-   <sender>actionTest</sender>
-   <signal>triggered()</signal>
-   <receiver>webdav2ccsds</receiver>
-   <slot>close()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>-1</x>
-     <y>-1</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>436</x>
-     <y>279</y>
-    </hint>
-   </hints>
-  </connection>
- </connections>
+ <connections/>
 </ui>
